--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3 class="h3">Hello It's Me</h3>
-            <h1>Muh Yasser Arafah Mufyan</h1>
+            <h1><span class="hi">Muh</span>  Yasser Arafah <span class="hi">Mufyan</span></h1>
             <h3>And Im a <span class="multiple-text"></span></h3>
             <p>selamat datang di web portofolio 
                 saya yang berisi sertifikat
@@ -53,7 +53,7 @@
                 <a href="#"><i class='bx bxl-youtube'></i></a>
                 <a href="#"><i class='bx bxl-discord-alt'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="https://www.cakeresume.com/pdf/s--o3P6XUHsrBZuXxuUDJnWIw--/pdAQOb.pdf" class="btn" target="_blank">Download CV</a>
         </div>
         <!-- <div class="home-img">
             <img src="img/home.gif" alt="">
@@ -67,7 +67,7 @@
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <h3>Frontend Developer</h3>
+            <h3>I am <span class="multiple-about"></span><h3>
             <p>Saya Seroang Website Developer</p>
             <p>Saya bisa membuat desain website sederhana
                 dengan kemampuanku saat ini</p>
@@ -335,10 +335,10 @@
 </footer>
 
 
-        <!-- typed js -->
-        <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-        <!-- scroll reveal -->
-        <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- typed js -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!-- custom js -->
     <script src="js/script.js"></script>
 </body>
