--- a/index.html
+++ b/index.html
@@ -341,5 +341,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- custom js -->
     <script src="js/script.js"></script>
+    <!-- back song -->
+    <audio src="backsong.mp3" autoplay loop></audio>
 </body>
 </html>
