--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     </style>
 </head>
 <body>
-<!-- header design -->
-<header class="header">
+
+    <!-- header start -->
+    <header class="header">
         <a href="#" class="logo">Portofolio</a>
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -33,10 +34,16 @@
             <a href="#portofolio"><i class='bx bxs-book-content'></i>Portofolio</a>
             <a href="#setifikat"><i class='bx bx-medal'></i>Achievement</a>
             <a href="#contact"><i class='bx bxs-contact'></i>Contact</a>
+
+            <!-- Tombol matikan suara -->
+            <button id="mute-button" onclick="toggleMute()">
+                <i class='bx bx-volume-mute' id="mute-icon"></i>
+            </button>
         </nav>
     </header>
+    <!-- header end -->
 
-    <!-- home section desing -->
+    <!-- home start -->
     <section class="home" id="home">
         <div class="home-content">
             <h3 class="h3">Hello It's Me</h3>
@@ -59,23 +66,25 @@
             <img src="img/home.gif" alt="">
         </div> -->
     </section>
+    <!-- home end -->
 
-    <!--about section desing  -->
+    <!--about start  -->
     <section class="about" id="about">
         <div class="about-img">
             <img src="img/about.jpeg" alt="" >
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <h3>I am <span class="multiple-about"></span><h3>
+            <h3>I am a <span class="multiple-about"></span><h3>
             <p>Saya Seroang Website Developer</p>
             <p>Saya bisa membuat desain website sederhana
                 dengan kemampuanku saat ini</p>
             <a href="#" class="btn">Read more</a>
         </div>
     </section>
+    <!-- about end -->
 
-    <!-- Skill section desing -->
+    <!-- Skill start -->
     <section class="skill" id="skill">
     <h2 class="heading">My <span>Skill</span></h2>
 
@@ -155,7 +164,7 @@
     </div>
 </section>
 
-    <!-- portfolio section desing -->
+    <!-- portfolio start -->
     <section class="portfolio" id="portofolio">
         <h2 class="heading">Latest <span>Project</span></h2>
         <div class="portfolio-container">
@@ -234,8 +243,9 @@
 
         </div>
     </section>
+    <!-- portofolio end -->
 
-    <!-- setifikat section desing -->
+    <!-- setifikat start -->
     <section class="portfolio" id="setifikat">
         <h2 class="heading">Latest <span>sertifikat</span> & <span>Piagam</span></h2>
         <div class="portfolio-container">
@@ -305,34 +315,37 @@
 
         </div>
     </section>
+    <!-- setifikat end -->
 
-<!-- contact section desing -->
-<section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
-        <form action="https://formsubmit.co/yasserarafat1507@gmail.com" method="POST">
-            <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
-            </div>
-            <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
-                <input type="text" placeholder="Email subject">
-            </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
-</section>
+    <!-- contact start -->
+    <section class="contact" id="contact">
+            <h2 class="heading">Contact <span>Me!</span></h2>
+            <form action="https://formsubmit.co/yasserarafat1507@gmail.com" method="POST">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email Address">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Mobile Number">
+                    <input type="text" placeholder="Email subject">
+                </div>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </form>
+    </section>
+    <!-- contact end -->
 
-<!-- footer section desing -->
-<footer class="footer">
-        <div class="footer-text">
-            
-            <p>Copyright &copy; 2024 by Muh Yasser Arafah Mufyan | ALL Right Reserved</p>
-        </div>
-        <div class="footer-icontop">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-        </div>
-</footer>
+    <!-- footer start -->
+    <footer class="footer">
+            <div class="footer-text">
+                
+                <p>Copyright &copy; 2024 by Muh Yasser Arafah Mufyan | ALL Right Reserved</p>
+            </div>
+            <div class="footer-icontop">
+                <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+            </div>
+    </footer>
+    <!-- footer end -->
 
 
     <!-- typed js -->
